--- a/app/src/main/res/layout/activity_new_event.xml
+++ b/app/src/main/res/layout/activity_new_event.xml
@@ -1,38 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_new_event"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.android.onemissing.NewEventActivity">
 
-    <TextView
-        android:text="Event"
+    <ImageView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="14dp"
-        android:layout_marginStart="14dp"
-        android:layout_marginTop="21dp"
-        android:id="@+id/lblEvent"
+        app:srcCompat="?attr/colorButtonNormal"
+        android:id="@+id/imgEvent"
+        android:background="?attr/colorButtonNormal"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:clickable="true"
+        android:scaleType="fitXY"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_height="200dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
         android:id="@+id/lblSport"
+        android:text="Sport"
+        android:layout_marginLeft="24dp"
+        android:layout_marginStart="24dp"
         android:layout_below="@+id/txtEvent"
-        android:layout_alignLeft="@+id/lblEvent"
-        android:layout_alignStart="@+id/lblEvent"
-        android:text="Sport" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:layout_marginTop="21dp"
         android:id="@+id/txtSport"
         android:inputType="text"
         android:text="Football"
@@ -46,10 +49,35 @@
         android:inputType="text"
         android:text="Peaky Boys Volley Match"
         android:ems="10"
-        android:layout_marginTop="15dp"
         android:id="@+id/txtEvent"
         android:layout_below="@+id/lblEvent"
-        android:layout_alignLeft="@+id/lblEvent"
-        android:layout_alignStart="@+id/lblEvent" />
+        android:layout_alignLeft="@+id/lblSport"
+        android:layout_alignStart="@+id/lblSport" />
+
+    <TextView
+        android:text="Event"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/lblEvent"
+        android:layout_below="@+id/imgEvent"
+        android:layout_alignLeft="@+id/txtEvent"
+        android:layout_alignStart="@+id/txtEvent"
+        android:layout_marginTop="27dp" />
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/linear_place"
+        android:onClick="onClickLocation">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/txtLocation"/>
+    </LinearLayout>
 
 </RelativeLayout>
