InfoWindow Class created to display events on the Map. Now, solving some problems with image visualization in New Event Activity...

--- a/app/src/main/res/layout/activity_new_event.xml
+++ b/app/src/main/res/layout/activity_new_event.xml
@@ -99,7 +99,6 @@
         android:background="#BF360C"
         android:textColor="@color/common_google_signin_btn_text_dark_default"
         style="@style/Widget.AppCompat.Button.Borderless"
-        android:onClick="saveEvent"
-        />
+        android:onClick="saveEvent" />
 
 </RelativeLayout>
