--- a/app/src/main/res/layout/event_box.xml
+++ b/app/src/main/res/layout/event_box.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent" android:layout_height="match_parent"
-    android:background="@drawable/bonuspack_bubble">
+    android:layout_width="wrap_content"
+    android:background="@drawable/bonuspack_bubble"
+    android:orientation="horizontal"
+    android:layout_height="wrap_content">
 
 
     <ImageView
@@ -21,18 +23,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/txtBoxEventName"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="192dp"
         android:layout_below="@+id/eventBox"
         />
 
     <TextView
-        android:id="@+id/txtBoxSportName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="51dp" />
+        android:id="@+id/txtBoxSportName"
+        android:layout_below="@+id/txtBoxEventName"
+        />
 
 </RelativeLayout>
