--- a/app/src/main/res/layout/fragment_map_main.xml
+++ b/app/src/main/res/layout/fragment_map_main.xml
@@ -10,7 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.android.onemissing.MapMainActivityFragment"
-    tools:showIn="@layout/activity_map_main">
+    tools:showIn="@layout/activity_main">
 
     <org.osmdroid.views.MapView
         android:layout_height="match_parent"
