--- a/app/src/main/res/layout/fragment_map_main.xml
+++ b/app/src/main/res/layout/fragment_map_main.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.android.onemissing.MapMainActivityFragment"
+    tools:context="com.example.android.onemissing.MapFragment"
     tools:showIn="@layout/activity_main">
 
     <org.osmdroid.views.MapView
