--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                android:background="@color/colorPrimary"
+                android:background="#691A99"
                 app:popupTheme="@style/AppTheme.PopupOverlay" />
 
             <ImageButton
@@ -45,12 +45,13 @@
             android:layout_height="wrap_content"
             app:tabMode="fixed"
             app:tabGravity="fill"
-            app:tabSelectedTextColor="@color/colorAccent"
+            app:tabSelectedTextColor="#68EFAD"
             app:tabTextColor="@color/common_google_signin_btn_text_dark_pressed"
             android:visibility="visible"
             app:tabBackground="@color/colorPrimary"
             android:focusable="true"
-            android:focusableInTouchMode="true">
+            android:focusableInTouchMode="true"
+            app:tabIndicatorColor="#68EFAD">
 
             <android.support.design.widget.TabItem
                 android:layout_height="wrap_content"
@@ -73,8 +74,6 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior" >
 
     </android.support.v4.view.ViewPager>
-
-    <include layout="@layout/content_map_main" />
 
 
 </android.support.design.widget.CoordinatorLayout>
