--- a/app/src/main/res/layout/fragment_user_events.xml
+++ b/app/src/main/res/layout/fragment_user_events.xml
@@ -10,17 +10,14 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:columnWidth="120dp"
-        android:numColumns="auto_fit"
-        android:horizontalSpacing="1dp"
-        android:verticalSpacing="1dp"
-        android:id="@+id/gallery"
-        app:layout_constraintRight_toLeftOf="parent"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toTopOf="parent"
-        tools:layout_constraintLeft_creator="1"
+        android:numColumns="2"
+        android:background="#E0F7FA"
+        android:id="@+id/gallery_events"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintVertical_bias="0.0" />
 
 </android.support.constraint.ConstraintLayout>
