--- a/app/src/main/res/layout/gv_event_square.xml
+++ b/app/src/main/res/layout/gv_event_square.xml
@@ -7,23 +7,49 @@
 
     <ImageView
         android:id="@+id/photo_event"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:maxWidth="39dip"
         android:scaleType="matrix"
         android:adjustViewBounds="true"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintRight_toLeftOf="@+id/guideline4"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.0" />
 
     <android.support.constraint.Guideline
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/guideline"
         android:orientation="horizontal"
-        tools:layout_editor_absoluteY="174dp"
+        tools:layout_editor_absoluteY="170dp"
         tools:layout_editor_absoluteX="0dp"
-        app:layout_constraintGuide_percent="0.34050882" />
+        app:layout_constraintGuide_begin="170dp" />
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/txtTitle"
+        app:layout_constraintRight_toRightOf="@+id/photo_event"
+        app:layout_constraintLeft_toLeftOf="@+id/photo_event"
+        app:layout_constraintBottom_toTopOf="@+id/guideline"
+        android:textColor="#FFFFFF"
+        android:visibility="visible"
+        app:layout_constraintHorizontal_bias="0.0"
+        android:fontFamily="sans-serif"
+        android:textStyle="normal|bold"
+        android:textAlignment="center"
+        android:background="#546E7A"/>
+
+    <android.support.constraint.Guideline
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/guideline4"
+        app:layout_constraintGuide_begin="171dp"
+        android:orientation="vertical"
+        tools:layout_editor_absoluteY="0dp"
+        tools:layout_editor_absoluteX="171dp" />
 
 </android.support.constraint.ConstraintLayout>
