--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#9d798b</color>
+    <color name="colorPrimary">#931cb3</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#862c4b</color>
 </resources>
